Fix squashed footer line height

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -135,6 +135,7 @@ footer
     text-align: right
     color: #a6a6a6
     font-size: 0.8em
+    line-height: 2em
 
 .header-option
     background-color: $header_highlight_strong
